# STM32_template

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  openocd_f7.cfg
cmake/: CMakeLists.txt  build_firmware.cmake  build_unit_test_windows.cmake  gnu-tool-for-host.cmake  gnu-tools-for-stm32.cmake  ide_generated.cmake
ide_gen/: .cproject  .mxproject  CMakeLists.txt  test.ioc  tree.txt
ide_gen/Core/Src/: stm32f7xx_it.c
ide_gen/svd/: STM32F746.svd
ide_gen/test/: CMakePresets.json
src/M0_SysApp/: CMakeLists.txt
src/M0_SysApp/App/Inc/: main_app.h
src/M0_SysApp/App/Src/: free_rtos_hooks.c  main_app.c
src/M0_SysApp/Config/: FreeRTOSConfig.h  configs.h  error_codes.h
src/M0_SysApp/Inc/: main_app.h
src/M0_SysApp/Src/: main_app.c
src/M1_App/: CMakeLists.txt
src/M2_BSP/: CMakeLists.txt
src/M4_MiddleWares/: CMakeLists.txt
src/M4_MiddleWares/fifo/: CMakeLists.txt  ring_buffer.c  ring_buffer.h  ring_char_buffer.c  ring_char_buffer.h
src/M4_MiddleWares/osal/: CMakeLists.txt
src/M4_MiddleWares/osal/cmake/: FREERTOS.cmake  WINDOWS.cmake
src/M4_MiddleWares/osal/include/: osal.h
src/M4_MiddleWares/osal/src/freertos/: osal.c
test/: CmakeLists.txt  test.c  test_runner.c
test/M0_SysApp/: test_main_app.c
test/host_test/: CmakeLists.txt  test.c  test_runner.c
test/host_test/M0_SysApp/: test_main_app.c
